@@ -12,18 +12,14 @@ function(cl, model, variable.names = NULL, n.iter, thin = 1, ...)
     cldata <- list(variable.names=variable.names,
         n.iter=n.iter, thin=thin, name=model)
     jagsparallel <- function(i, ...) {
-#        if (!exists(cldata$name, envir=.GlobalEnv))
-        if (!exists(cldata$name, envir=globalenv()))
+        if (!exists(cldata$name, envir=.parDcloneEnv))
             return(NULL)
-#        cldata <- as.list(get(".DcloneEnv", envir=.GlobalEnv))
         cldata <- as.list(get(".DcloneEnv", envir=globalenv()))
-#        res <- get(cldata$name, envir=.GlobalEnv)
-        res <- get(cldata$name, envir=globalenv())
+        res <- get(cldata$name, envir=.parDcloneEnv)
         n.clones <- nclones(res)
         out <- coda.samples(res, variable.names=cldata$variable.names,
             n.iter=cldata$n.iter, thin=cldata$thin, ...)
-#        assign(cldata$name, res, envir=.GlobalEnv)
-        assign(cldata$name, res, envir=globalenv())
+        assign(cldata$name, out, envir=.parDcloneEnv)
         if (!is.null(n.clones) && n.clones > 1) {
             attr(out, "n.clones") <- n.clones
         }
